--- a/config.json
+++ b/config.json
@@ -1,58 +1,33 @@
 {
+    "output_data": false,
     "listen_PORT": 2500,
-    "num_fragment": 43,
-    "fragment_sleep": 0.1,
+    "num_TCP_fragment": 0,
+    "num_TLS_fragment": 2,
     "my_socket_timeout": 180,
     "domains": {
 		"freezhihu.org": {
             "IP": "104.19.112.120",
-            "frag": 1,
-            "sleep": 0.2
+            "TCP_frag": 0,
+            "TCP_sleep": 0.01,
+            "TLS_frag": 6
         },
         "api.freezhihu.org": {
             "IP": "104.19.112.120",
-            "frag": 1,
-            "sleep": 0.2
+            "TCP_frag": 0,
+            "TCP_sleep": 0.01,
+            "TLS_frag": 6
         },
         "comments-api.greatfire.org": {
-            "IP": "104.19.112.119",
-            "frag": 1,
-            "sleep": 0.2
-        },
-        "www.pixiv.net": {
-            "IP": "104.19.112.156",
-            "frag": 7,
-            "sleep": 0.2
-        },
-        "accounts.pixiv.net": {
-            "IP": "104.19.112.151",
-            "frag": 10,
-            "sleep": 0.2
-        },
-        "liaoyuan1949.site": {
-            "IP": "104.19.112.156",
-            "frag": 8,
-            "sleep": 0.2
-        },
-        "bu2021.xyz": {
-            "IP": "104.19.112.159",
-            "frag": 4,
-            "sleep": 0.2
-        },
-        "pages.dev": {
-            "IP": "104.19.112.161",
-            "frag": 2,
-            "sleep": 0.2
-        },
-        "workers.dev": {
-            "IP": "104.19.112.169",
-            "frag": 2,
-            "sleep": 0.2
+            "IP": "104.19.112.120",
+            "TCP_frag": 0,
+            "TCP_sleep": 0.01,
+            "TLS_frag": 6
         },
         "null": {
             "IP": "127.0.0.1",
-            "frag": 114514,
-            "sleep": 0.001
+            "TCP_frag": 0,
+            "TCP_sleep": 0.001,
+            "TLS_frag": 0
         }
     }
 }
