--- a/config.json
+++ b/config.json
@@ -23,9 +23,24 @@
 			"IPcache": false
         },
 		"telegram.org": {
-            "IP": "2001:b28:f23f:f005::d"
+			"IP": "2001:67c:4e8:f004::8"
+        },
+		"telegram.me": {
+			"IP": "2001:67c:4e8:f004::8"
+            
+        },
+		"t.me": {
+			"IP": "2001:67c:4e8:f004::8",
+            "TLS_frag": 1,
+			"num_TCP_fragment": 3,
+			"num_TLS_fragment": 5,
+			"TCP_frag": 2
         },
         "googleusercontent.com": {
+            "IP": "4.193.121.119",
+            "port": 41620
+        },
+		".translate.goog": {
             "IP": "4.193.121.119",
             "port": 41620
         },
