--- a/config.json
+++ b/config.json
@@ -11,6 +11,22 @@
     "DNS_log_every": 5,
     "IPtype": "ipv4",
     "domains": {
+        "wikipedia": {
+            "IP": "103.102.166.224",
+            "TLS_frag": 2,
+            "TCP_frag": 3,
+            "num_TCP_fragment": 3,
+            "num_TLS_fragment": 3,
+            "TCP_sleep": 0.01
+        },
+        "wikimedia": {
+            "IP": "103.102.166.240",
+            "TLS_frag": 2,
+            "TCP_frag": 3,
+            "num_TCP_fragment": 3,
+            "num_TLS_fragment": 3,
+            "TCP_sleep": 0.01
+        },
         "pixiv": {
             "TLS_frag": 3
         },
