fix sni finding in tcp_frag and unexpectation method

--- a/config.json
+++ b/config.json
@@ -13,7 +13,9 @@
     "IPtype": "ipv4",
     "domains": {
         "github.com": {
-            "IP": "140.82.121.3"
+            "IP": "140.82.121.3",
+            "TLS_frag": 3,
+            "TCP_frag": 5
         },
 
         "wiki": {
