--- a/config.json
+++ b/config.json
@@ -4,9 +4,9 @@
     "DOH_PORT": 2500,
     "num_TCP_fragment": 3,
     "num_TLS_fragment": 2,
-    "TCP_frag": 0,
+    "TCP_frag": 7,
     "TCP_sleep": 0.01,
-    "TLS_frag": 5,
+    "TLS_frag": 4,
     "my_socket_timeout": 180,
     "doh_server": "https://cloudflare-dns.com/dns-query?dns=",
     "DNS_log_every": 5,
@@ -37,8 +37,7 @@
             "port": 1445
         },
         "googlevideo.com": {
-            "IPtype": "ipv6",
-            "IPcache": false
+            "IPtype": "ipv6"
         },
         "googleusercontent.com": {
             "IP": "4.193.121.119",
