--- a/config.json
+++ b/config.json
@@ -27,8 +27,7 @@
       "TLS_frag": 3,
       "TCP_frag": 5
     },
-    "githubusercontent.com": {
-    },
+    "githubusercontent.com": {},
     "wiki": {
       "IP": "185.15.58.224",
       "TLS_frag": 2,
@@ -104,6 +103,13 @@
       "TLS_frag": 3,
       "TCP_frag": 5
     },
+    "dropbox.com": {
+      "IP": "162.125.2.18"
+    },
+    "www.dropbox.com": {
+      "IP": "162.125.2.18"
+    },
+    ".dropbox.com": {},
     "telegram.org": {
       "IP": "2001:67c:4e8:f004::8"
     },
