--- a/config.json
+++ b/config.json
@@ -42,6 +42,10 @@
     "pixiv": {
       "TLS_frag": 3
     },
+    "chrome.com": {
+      "IP": "35.190.247.148",
+      "port": 1445
+    },
     "google.com": {
       "IP": "35.190.247.149",
       "port": 1445
