upd sni finding

--- a/config.json
+++ b/config.json
@@ -12,6 +12,9 @@
   "DNS_log_every": 5,
   "IPtype": "ipv4",
   "domains": {
+    "pornhub.com": {
+      "IP": "66.254.114.63"
+    },
     "web.archive.org": {
       "IP": "207.241.237.3"
     },
