ipall & ip certerr

--- a/config.json
+++ b/config.json
@@ -13,7 +13,9 @@
   "IPtype": "ipv4",
   "domains": {
     "pornhub.com": {
-      "IP": "216.18.168.16"
+      "IP": "216.18.168.16",
+      "IPall": ["66.254.114.33","66.254.114.164","216.18.168.15","216.18.168.16"],
+      "IPcerterr": ["66.254.114.40","66.254.114.78","66.254.114.236"]
     },
     "help.pornhub.com": {},
     "web.archive.org": {
