--- a/config.json
+++ b/config.json
@@ -11,6 +11,10 @@
   "doh_server": "https://cloudflare-dns.com/dns-query?dns=",
   "DNS_log_every": 5,
   "IPtype": "ipv4",
+  "domains-comment": [
+    "I will try to maintain the websites on https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E8%A2%AB%E5%B0%81%E9%94%81%E7%BD%91%E7%AB%99%E5%88%97%E8%A1%A8 and some other known websites",
+    "https://github.com/maoist2009/HTTPS_IP_finder is recommened to find the IP of websites"
+  ],
   "domains": {
     "pornhub.com": {
       "IP": "216.18.168.16",
