--- a/config.json
+++ b/config.json
@@ -17,6 +17,8 @@
     {
       "IP": "199.232.137.164"
     },
+    "purr.nytimes.com": {},
+    "et.nytimes.com": {},
     "nyt.com": {
       "IP": "199.232.137.164"
     },
