--- a/config.json
+++ b/config.json
@@ -15,9 +15,15 @@
   "method": "TLSfrag",
   "IPtype": "ipv4",
   "domains": {
+    "steampowered.com": {
+      "IP": "23.202.181.157"
+    },
     "quora": {
       "IP": "104.21.3.225",
       "TLS_frag": 3
+    },
+    "copilot.microsoft.com": {
+      "IP": "2.17.22.191"
     },
     "onedrive.live.com": {
       "method": "FAKEdesync",
@@ -93,6 +99,9 @@
     },
     "upload.wikimedia.org": {
       "IP": "185.15.58.240"
+    },
+    "wiktionary.org": {
+      "IP": "185.15.59.224"
     },
     "pixiv": {
       "TLS_frag": 3
